--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                         <div class="cat-info">
                             <span>THIẾT BỊ</span>
                             <h3>CHẨN ĐOÁN HÌNH ẢNH</h3>
-                            <a href="./pages/chitiet.html" class="btn-more"
+                            <a href="./pages/danhsachsp.html" class="btn-more"
                                 >Xem thêm ></a
                             >
                         </div>
@@ -145,7 +145,7 @@
                         <div class="cat-info">
                             <span>THIẾT BỊ</span>
                             <h3>HỒI SỨC CẤP CỨU</h3>
-                            <a href="./pages/chitiet.html" class="btn-more"
+                            <a href="./pages/danhsachsp.html" class="btn-more"
                                 >Xem thêm ></a
                             >
                         </div>
@@ -158,7 +158,7 @@
                         <div class="cat-info">
                             <span>THIẾT BỊ</span>
                             <h3>PHÒNG MỔ</h3>
-                            <a href="./pages/chitiet.html" class="btn-more"
+                            <a href="./pages/danhsachsp.html" class="btn-more"
                                 >Xem thêm ></a
                             >
                         </div>
@@ -168,7 +168,7 @@
                         <div class="cat-info">
                             <span>THIẾT BỊ</span>
                             <h3>CHUYÊN KHOA NỘI</h3>
-                            <a href="./pages/chitiet.html" class="btn-more"
+                            <a href="./pages/danhsachsp.html" class="btn-more"
                                 >Xem thêm ></a
                             >
                         </div>
@@ -184,7 +184,7 @@
                         <div class="cat-info">
                             <span>THIẾT BỊ</span>
                             <h3>CHUYÊN KHOA SẢN - NHI</h3>
-                            <a href="./pages/chitiet.html" class="btn-more"
+                            <a href="./pages/danhsachsp.html" class="btn-more"
                                 >Xem thêm ></a
                             >
                         </div>
@@ -200,7 +200,7 @@
                         <div class="cat-info">
                             <span>THIẾT BỊ</span>
                             <h3>PHỤC HỒI CHỨC NĂNG</h3>
-                            <a href="./pages/chitiet.html" class="btn-more"
+                            <a href="./pages/danhsachsp.html" class="btn-more"
                                 >Xem thêm ></a
                             >
                         </div>
