--- a/pages/apply.html
+++ b/pages/apply.html
@@ -88,7 +88,7 @@
                                 />
                             </div>
 
-                            <div class="form-group">
+                            <div class="form-group form-phone">
                                 <label for="phone"
                                     >Số điện thoại
                                     <span class="required">*</span></label
