--- a/pages/header.html
+++ b/pages/header.html
@@ -49,7 +49,7 @@
                 <div class="mobile-menu-title">TM Medical Technology</div>
             </li>
             <li class="nav-item">
-                <a href="../index.html" class="nav-item-link">Trang chủ</a>
+                <a href="/" class="nav-item-link">Trang chủ</a>
             </li>
             <li class="nav-item">
                 <a href="../pages/about.html" class="nav-item-link"
